@@ -1,8 +1,8 @@
 The package is based on Adobe XMP SDK 4.1.1.
 
-
-Other authors are:
+Authors are:
 
 Hubert Figuiere <hub@figuiere.net>
+Adobe Systems Incorporated (XMP SDK)
 Ian Jacobi
 Jason Kivlighn
