@@ -1,5 +1,9 @@
 1.99.5
 
+- ABI breakage: soversion is now 3
+- Change: API xmp_get_property_and_bits() renamed xmp_get_property().
+- Change: API xmp_set_property2() renamed xmp_set_property().
+- Bug: more exception handling and refactor set_error() use.
 - Bug: add AC_CONFIG_MACRO_DIR to configure.
 
 1.99.4
